# git-global

./: .editorconfig  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  rust.yml  scorecards.yml
doc/: git-global.1
src/: cli.rs  config.rs  core.rs  errors.rs  generate_manpage.rs  lib.rs  main.rs  parallel.rs  repo.rs  report.rs  subcommands.rs  test_utils.rs
src/subcommands/: ahead.rs  ignore.rs  ignored.rs  info.rs  install_manpage.rs  list.rs  mod.rs  scan.rs  staged.rs  stashed.rs  status.rs  unpushed.rs  unstaged.rs
tests/: cli.rs  repo.rs  subcommands.rs  utils.rs
tests/utils/: mod.rs
