[package]

name = "git-global"
version = "0.5.1"
authors = ["Eric Petersen <eric@ericpetersen.io>"]
description = "Keep track of all the git repositories on your machine."

homepage = "https://github.com/peap/git-global"
repository = "https://github.com/peap/git-global"
documentation = "https://docs.rs/git-global"

license = "MIT"
readme = "README.md"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]

edition = "2018"

default-run = "git-global"

[[bin]]
name = "git-global"
path = "src/main.rs"
doc = false

[[bin]]
name = "generate-manpage"
path = "src/generate_manpage.rs"
doc = false
required-features = ["manpage"]

[features]
manpage = ["man"]

[dependencies]
chrono = "0.4"
clap = "2"
directories = "3"
json = "0.12"
walkdir = "2"

[dev-dependencies]
regex = "1"
tempdir = "0.3"

[dependencies.git2]
version = "0.13"
default-features = false  # don't want SSH/HTTPS/Curl

[dependencies.man]
version = "0.3"
optional = true
