[package]

name = "git-global"
version = "0.6.6"
authors = ["Eric Petersen <eric@ericpetersen.io>"]
description = "Keep track of all the git repositories on your machine."

homepage = "https://github.com/peap/git-global"
repository = "https://github.com/peap/git-global"
documentation = "https://docs.rs/git-global"

license = "MIT"
readme = "README.md"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

edition = "2021"

default-run = "git-global"

[[bin]]
name = "git-global"
path = "src/main.rs"
doc = false

[[bin]]
name = "generate-manpage"
path = "src/generate_manpage.rs"
doc = false
required-features = ["manpage"]

[features]
manpage = ["man"]

[dependencies]
directories = "6"
serde_json = "1"
termsize = "0.1"
walkdir = "2"

[dev-dependencies]
regex = "1"
tempfile = "3"

[dependencies.clap]
version = "4"
features = ["cargo"]

[dependencies.git2]
version = "0.20"
default-features = false  # don't need SSH/HTTPS

[dependencies.man]
version = "0.3"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
